--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -31,4 +31,5 @@
         , './components/hamburger'
         , './components/toggle-switch'
         , './components/mailchimp-subscribe'
+        , './components/download-manager'
         , './components/popup';
