Small fixes added

--- a/src/assets/styles/abstract/_mixin.scss
+++ b/src/assets/styles/abstract/_mixin.scss
@@ -231,3 +231,13 @@
       @content;
     }
 }
+
+@mixin selected(){
+  &::-moz-selection {
+    background-color: $c-pink;
+  }
+
+  &::selection {
+    background-color: $c-pink;
+  }
+}
