--- a/src/assets/styles/components/_popup.scss
+++ b/src/assets/styles/components/_popup.scss
@@ -23,6 +23,11 @@
     border: 1px solid $c-black;
     height: 100%;
     overflow: scroll;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+        display: none;
+      }
     @include respond(tablet-small){
         padding-top: 45px;
         padding-bottom: 53px;
