--- a/src/assets/styles/components/_news.scss
+++ b/src/assets/styles/components/_news.scss
@@ -59,7 +59,7 @@
     font-weight: 400;
     line-height: 130%;
     font-family: $f-heading;
-
+    text-transform: capitalize;
     @include respond(tablet) {
       font-size: 40px;
       color: $primary;
