--- a/src/assets/styles/components/_news.scss
+++ b/src/assets/styles/components/_news.scss
@@ -68,9 +68,12 @@
 
   &__items {
     margin-top: 24px;
+    display: grid;
+    grid-row-gap: 50px;
+
     @include respond(tablet-small) {
       margin-top: 20px;
-      display: grid;
+      
       grid-template-columns: 1fr 1fr 1fr;
       grid-row-gap: 20px;
       grid-column-gap: 20px;
