--- a/src/assets/styles/pages/_post.scss
+++ b/src/assets/styles/pages/_post.scss
@@ -166,3 +166,9 @@
     margin-top: 56px;
    }
 }
+.tab-content{
+  margin-bottom: 55px;
+  @include respond(tablet){
+    margin-bottom: 76px;
+  }
+}
