--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -51,13 +51,20 @@
     background-color: $c-yellow;
 
     @include respond(desktop-small, max) {
-      font-size: 1.5vw;
-      padding-left: 5px;
+      font-size: 18px;
+      padding-left: 24px;
+      padding-top: 10px;
+      padding-bottom: 10px;
       padding-right: 0;
-      line-height: 180%;
+      line-height: 140%;
+      width: 47%;
     }
-    
-    @include respond(tablet, max) {
+    @include respond(desktop-small){
+      width: 30%;
+      font-size: 23px;
+      line-height: 130%;
+    }
+    @include respond(mobile, max) {
       display: none;
     }
 
@@ -183,7 +190,7 @@
     height: 100%;
     justify-content: center;
     align-items: center;
-    background-color: #E5E5E5;
+    background-color: $c-white;
 
     @include respond(tablet, max) {
       flex-grow: 1;
