--- a/src/assets/styles/components/_mailchimp-subscribe.scss
+++ b/src/assets/styles/components/_mailchimp-subscribe.scss
@@ -11,7 +11,13 @@
     }
 
     &-container {
-      @include respond(tablet, max) {
+      @include respond(tablet-small){
+        width: 281px;
+      }
+      @include respond(tablet){
+        width: auto;
+      }
+      @include respond(tablet-small, max) {
         margin-top: 36px;
       }
     }
