Popup fix added

--- a/src/assets/styles/base/_typography.scss
+++ b/src/assets/styles/base/_typography.scss
@@ -1,8 +1,20 @@
 .p1{
     font: 400 18px / 130% $f-text;
 }
+%p3{
+    font: 400 16px / 130% $f-text;
+    @include respond(tablet-small){
+        font-size: 18px;
+    }
+}
 %p4{
     font: 400 12px / 130% $f-text;
+}
+%heading--1{
+    font: 400 30px / 130% $f-heading;
+    @include respond(tablet){
+        font-size: 40px;
+    }
 }
 %heading--2{
     font: 400 24px / 130% $f-heading;
