--- a/src/assets/styles/components/_cards.scss
+++ b/src/assets/styles/components/_cards.scss
@@ -31,6 +31,10 @@
 
     img {
       @include cover-image;
+      max-width: 100%;
+      height: auto;
+      width: 100%;
+      height: 100%;
     }
   }
 
