--- a/src/assets/styles/components/_search.scss
+++ b/src/assets/styles/components/_search.scss
@@ -87,7 +87,6 @@
 
   &__input {
     margin-top: 15px;
-    
     @include respond(tablet) {
       margin-top: 40px;
     }
@@ -109,6 +108,7 @@
       outline: none;
       font-size: 16px;
       line-height: 130%;
+      font-family: $f-text;
     }
   }
 
