Transcript accordion search connection added

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -32,4 +32,5 @@
         , './components/toggle-switch'
         , './components/mailchimp-subscribe'
         , './components/download-manager'
+        , './components/transcript-accordion'
         , './components/popup';
